# clp

./: README.md  pyproject.toml
clp/: commandprocessor.py  commandprocessor.pyi
